<resources>
    <string name="app_name">Inventory App 2</string>
    <string name="intro_info">It\'s all gloomy out here, why don\'t you add some devices by clicking that FAB button out there ??</string>
    <string name="Device_info">Device Information</string>
    <string name="device_name">Device Name</string>
    <string name="cost">Cost</string>
    <string name="minus">-</string>
    <string name="no_devices">No.of Devices</string>
    <string name="suplier_info">Supplier Information</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_contact">Supplier Contact No.</string>
    <string name="Note9">Samsung Galaxy Note 9</string>
    <string name="Cost">Cost :</string>
    <string name="random_cost">67800</string>
    <string name="per_pc">(per pc)</string>
    <string name="sup_name">Amazon Inc.</string>
    <string name="items_stock">Items in Stock :</string>
    <string name="count">100</string>
    <string name="buy_now">Buy Now !!!!</string>
    <string name="delete_all_devices">Delete all Devices</string>
    <string name="delete_device">Delete Device</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="save_changes">Save Changes</string>
    <string name="error_delete_devices">Error in deleting devices</string>
    <string name="device_delet__success">All devices deleted successfully</string>
    <string name="confirm_delete">Sure, you wanna delete all the devices listed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_individual_device">Sure, you wanna delete  this device ??</string>
    <string name="discard_changes">Discard your changes ??</string>
    <string name="dev_Del_success">Device deleted successfully</string>
    <string name="device_del_fail">Deletion in device failed</string>
    <string name="changes_success">Changes done successfully</string>
    <string name="info_notSaved">Information not saved</string>
    <string name="entru_success">Entry of device successful</string>
    <string name="entry_unsuccess">Entry of device unsuccessful</string>
    <string name="quantneg">Quantity can\'t be negative</string>
    <string name="cost_neg">Cost can\'t be negative</string>
    <string name="reqd_field">Required field</string>
</resources>
