<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/editScreenn_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_info_textView"
            android:layout_width="@dimen/nulld_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Top"
            android:layout_weight="2"
            android:text="@string/Device_info"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/info_textSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/nulld_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/device_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_name"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/device_cost_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost"
                android:inputType="numberSigned" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/subtract"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="@dimen/btn_width"
                    android:layout_marginTop="@dimen/btn_mgTop"
                    android:background="@drawable/circle_button"
                    android:text="@string/minus"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/device_quantity_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mg_Left"
                    android:layout_marginTop="@dimen/margin_Top"
                    android:hint="@string/no_devices"
                    android:inputType="numberSigned"
                    android:maxLength="3" />

                <Button
                    android:id="@+id/addition"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="@dimen/btn_width"
                    android:layout_marginLeft="@dimen/mg_Left"
                    android:layout_marginTop="@dimen/btn_mgTop"
                    android:background="@drawable/circle_button"
                    android:text="+"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/supplier_mgTop"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/supplier_info_textView"
            android:layout_width="@dimen/nulld_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Top"
            android:layout_weight="2"
            android:text="@string/suplier_info"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/info_textSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/nulld_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_name__editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name" />

            <EditText
                android:id="@+id/supplier_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_contact"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>